# helix

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/helix/: Window.h
src/: Window.cpp  main.cpp
